# Automated-Test-Creation

./: .cursorrules  .gitignore  .windsurfrules  AGENTS.md  CLAUDE.md  README.md  agent.md  requirements.txt  setup-atc.ps1
.antigravity/: instructions.md
.cursor/: rules
.github/: copilot-instructions.md
cli/: .env.example  README.md  pyproject.toml  run_atc.cmd  run_atc.ps1  run_atc.sh  run_full.ps1  run_full.sh  setup_env.py
cli/atc/: __init__.py  __main__.py  executor.py  main.py
cli/atc/core/: models.py  progress.py
cli/atc/infra/: ado.py  ado_url.py  config.py  git.py  prompts.py  settings.py  workspace.py
cli/atc/output/: console.py
cli/atc/providers/: __init__.py  azure_openai.py  base.py  claude.py  cli_agent.py  ollama.py  prompt_only.py
cli/atc/ui/: __init__.py  app.py  state.py
cli/atc/ui/components/: __init__.py
cli/atc/ui/pages/: config_editor.py  dashboard.py  pipeline.py  settings.py  workspace.py
cli/configs/prompts/: scenario-generation.md.j2  system-prompt.md.j2  work-item-summary.md.j2
cli/configs/reference/: Background_Steps.txt  Common_Steps.txt  Instructions.txt
cli/configs/runs/: example.json
cli/tests/: conftest.py  test_bdd_validation.py  test_setup_env.py
cli/tools/: ehb_test_runner.py  external-runner.cmd  external-runner.sh  parse_trx.py
docs/: Automated_Test_Creation_CLI_Design.md  Automated_Test_Creation_Technical_Plan.md  Automated_Test_Creation_Tool_Design.md
docs/wiki/: Architecture.md  Changelog.md  Configuration.md  Cross-Platform-Support.md  Home.md  (+7 more)
ref/: GeneratedScenarios.feature  UserStory.txt
