[project]
name = "atc"
version = "0.1.0"
description = "Automated Test Creation — BDD feature file generator from Azure DevOps work items"
requires-python = ">=3.12,<3.14"
dependencies = [
    "typer[all]>=0.12",
    "rich>=13",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "jinja2>=3.1",
    "markdownify>=0.13",
    "openai>=2.28.0",
    "nicegui>=2.0",
]

[project.optional-dependencies]
claude = ["anthropic>=0.40"]
azure-openai = ["openai>=1.40"]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
]

[project.scripts]
atc = "atc.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["atc"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
